compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__invalid_label_shorthand_4.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1509
expression: "\npub fn main() {\n  wibble(arg::)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  wibble(arg::)
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:14
  │
3 │   wibble(arg::)
  │              ^ I was not expecting this

Found `:`, expected one of: 
- `)`
